Upgrade go dependencies and fix auth
